bk_ida/gccida/g1/new_cselib_val
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_cselib_val/src/cselib.c:1160:50: error: must use 'enum' tag to refer to type 'machine_mode'
cselib_val * new_cselib_val( unsigned int value, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_cselib_val/src/cselib.c:1185:30: error: use of undeclared identifier 'insn'
fancy_abort( ( const char *)&insn, 710, "new_cselib_val"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_cselib_val/src/obj/cselib.o] Error 1
